# birthday_backend

./: .env  .env.example  .flake8  .gitignore  FRONTEND_INTEGRATION_TEST.js  FRONTEND_POLLING_STRATEGY.md  README.md  RENDER_ENV_CHECKLIST.txt  RENDER_ENV_TEMPLATE.md  app.py  build.sh  config.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  security.yml  tests.yml
models/: __init__.py  storage.py
routes/: __init__.py  callback.py  health.py  payments.py  wishes.py
services/: __init__.py  payhero_service.py  smtp_service.py  validation.py
tests/: __init__.py  conftest.py  test_payments.py  test_wishes.py
utils/: __init__.py  helpers.py  limiter.py  logger.py  responses.py
